# SearchEngine

./: .dockerignore  .gitignore  LICENSE  README.md  app.dockerfile  app.py  cdk.context.json  cdk.json  docker-compose.yml  pyproject.toml
corpus_query/: test.py
corpus_query/services/api/: main.py
corpus_query/services/ingestion/: chunk.py
corpus_query/services/vector_db/: client.py
corpus_query/utils/: chunk.py  vector_db.py
