[tool.poetry]
name = "corpus-query"
version = "0.1.0"
description = ""
authors = ["Anthony Rolland <6172844+LaconicPneumonic@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "corpus_query"}]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
weaviate-client = "^3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
