[tool.poetry]
name = "corpus-query"
version = "0.1.0"
description = ""
authors = ["Anthony Rolland <6172844+LaconicPneumonic@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
sentence-transformers = "^2.2.2"
weaviate-client = "^3.19.2"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^2.0.2"
diskcache = "^5.6.1"
llama-index = "^0.8.43.post1"
python-multipart = "^0.0.6"
pypdf = "^3.16.4"


[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "^2.90.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
